--- a/index.html
+++ b/index.html
@@ -97,10 +97,9 @@
           <img class="card-img-top" src="assets/images/pexels-catchavibe-1409200.jpg" alt="Surf image" />
           <div class="card-body text-start">
             <p class="card-text">
-              Grace à TSP je fais le tour du monde avec mon et fais du surf ! si l'expérience était à refaire je le
-              refaires plein de fois.
+              Chaque matin, je prépare ma planche et sens l’excitation monter avant de prendre les vagues. TSP rend chaque session unique !
             </p>
-            <small class="text-muted">With faded secondary text</small>
+            <small class="text-muted">Maxile, Novembre 2019</small>
           </div>
         </div>
       </div>
@@ -110,13 +109,54 @@
           <img class="card-img-top" src="assets/images/pexels-khairulleon-695779.jpg" alt="Surf image" />
           <div class="card-body text-start">
             <p class="card-text">
-              Grace à TSP je fais le tour du monde avec mon et fais du surf ! si l'expérience était à refaire je le
-              refaires plein de fois.
+              Avec mon ami, on découvre de nouveaux spots et partage notre passion pour le surf. Chaque session devient un vrai moment de liberté !
             </p>
-            <small class="text-muted">With faded secondary text</small>
+            <small class="text-muted">Lucas & Théo, Juin 2020</small>
           </div>
         </div>
       </div>
+    </div>
+  </section>
+
+  <section class="container mt-5">
+    <h1 class="text-center"> Prix</h1>
+    <div class="row mt-5 justify-content-center">
+      <div class="col-12 col-md-4">
+        <div class="card p-0">
+          <div class="card-body text-center">
+            <p>Semaine d'essai</p>
+            <hr>
+            <h4 class="card-title">0€</h4>
+            <p class="card-text">
+              Le kiff <br> A Bali <br> Pendant 1 semaine</p>
+            <a href="#" class="btn btn-outline-primary" style="width: 80%;">S'inscrire</a>
+          </div>
+      </div>
+    </div>
+    <div class="col-12 col-md-4">
+        <div class="card p-0">
+          <div class="card-body text-center">
+            <p>Early Bird</p>
+            <hr>
+            <h4 class="card-title">15€</h4>
+            <p class="card-text">
+              Le kiff <br> A Bali <br> Pendant 1 semaine</p>
+            <a href="#" class="btn btn-primary" style="width: 80%;">S'inscrire</a>
+          </div>
+      </div>
+    </div>
+    <div class="col-12 col-md-4">
+        <div class="card p-0">
+          <div class="card-body text-center">
+            <p>En trois fois</p>
+            <hr>
+            <h4 class="card-title">7€ <span class="text-muted">/ mo</span></h4>
+            <p class="card-text">
+              Le kiff <br> A Bali <br> Pendant 1 semaine</p>
+            <a href="#" class="btn btn-primary" style="width: 80%;">S'inscrire</a>
+          </div>
+      </div>
+    </div>
     </div>
   </section>
 
