--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@
       <div class="col-12 col-md-4">
         <div class="card p-0">
           <div class="card-body text-center">
-            <p>Semaine d'essai</p>
+            <h4>Semaine d'essai</h4>
             <hr>
-            <h4 class="card-title">0€</h4>
+            <h5 class="card-title">0€</h5>
             <p class="card-text">
               Le kiff <br> A Bali <br> Pendant 1 semaine</p>
             <a href="#" class="btn btn-outline-primary" style="width: 80%;">S'inscrire</a>
@@ -136,9 +136,9 @@
     <div class="col-12 col-md-4">
         <div class="card p-0">
           <div class="card-body text-center">
-            <p>Early Bird</p>
+            <h4>Early Bird</h4>
             <hr>
-            <h4 class="card-title">15€</h4>
+            <h5 class="card-title">15€</h5>
             <p class="card-text">
               Le kiff <br> A Bali <br> Pendant 1 semaine</p>
             <a href="#" class="btn btn-primary" style="width: 80%;">S'inscrire</a>
@@ -148,9 +148,9 @@
     <div class="col-12 col-md-4">
         <div class="card p-0">
           <div class="card-body text-center">
-            <p>En trois fois</p>
+            <h4>En trois fois</h4>
             <hr>
-            <h4 class="card-title">7€ <span class="text-muted">/ mo</span></h4>
+            <h5 class="card-title">7€ <span class="text-muted">/ mo</span></h5>
             <p class="card-text">
               Le kiff <br> A Bali <br> Pendant 1 semaine</p>
             <a href="#" class="btn btn-primary" style="width: 80%;">S'inscrire</a>
@@ -159,6 +159,9 @@
     </div>
     </div>
   </section>
+  <footer class=" container mt-5 mb-2">
+    <small class="text-start text-muted">&copy; Bootstrap, et The Surfing Project</small>
+  </footer>
 
   <script src="bootstrap-5.3.8-dist/js/bootstrap.bundle.min.js"></script>
 </body>
