Modif Font-Family

--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
   <div class="header_image d-flex justify-content-center align-items-center">
     <div class="color-overlay d-flex justify-content-center align-items-center text-center flex-column mb-5">
       <h1>Partez à l'aventure</h1>
-      <p>Découvreza notre école de surf en peer-learning</p>
+      <p class="fs-5">Découvreza notre école de surf en peer-learning</p>
       <div class="header_button">
-        <button type="button" class="btn btn-primary btn-sm">
+        <button type="button" class="btn btn-primary">
           Je m'inscris à la prochaine session
         </button>
-        <button type="button" class="btn btn-secondary btn-sm">
+        <button type="button" class="btn btn-secondary">
           Je découvre le programme
         </button>
       </div>
