--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   <title>The Surfing Project</title>
 </head>
 
-<body>
+<body data-bs-theme="dark">
+
   <header>
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
       <div class="container-fluid">
@@ -23,7 +24,7 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto">
+          <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link active" href="#">Accueil</a>
             </li>
@@ -36,6 +37,10 @@
               </a>
             </li>
           </ul>
+        </div>
+        <div class="form-check form-switch mx-4 ms-auto">
+           <input class="form-check-input p-2"
+            type="checkbox" role="switch" id="flexSwitchCheckChecked" checked onclick="myFunction()"/>
         </div>
       </div>
     </nav>
@@ -99,7 +104,7 @@
             <p class="card-text">
               Chaque matin, je prépare ma planche et sens l’excitation monter avant de prendre les vagues. TSP rend chaque session unique !
             </p>
-            <small class="text-muted">Maxile, Novembre 2019</small>
+            <small class="text-muted">Maxime, Novembre 2019</small>
           </div>
         </div>
       </div>
@@ -128,7 +133,7 @@
             <hr>
             <h5 class="card-title">0€</h5>
             <p class="card-text">
-              Le kiff <br> A Bali <br> Pendant 1 semaine</p>
+              Le kiff <br> À Bali <br> Pendant 1 semaine</p>
             <a href="#" class="btn btn-outline-primary" style="width: 80%;">S'inscrire</a>
           </div>
       </div>
@@ -140,7 +145,7 @@
             <hr>
             <h5 class="card-title">15€</h5>
             <p class="card-text">
-              Le kiff <br> A Bali <br> Pendant 1 semaine</p>
+              Le kiff <br> À Bali <br> Pendant 12 semaines</p>
             <a href="#" class="btn btn-primary" style="width: 80%;">S'inscrire</a>
           </div>
       </div>
@@ -152,7 +157,7 @@
             <hr>
             <h5 class="card-title">7€ <span class="text-muted">/ mo</span></h5>
             <p class="card-text">
-              Le kiff <br> A Bali <br> Pendant 1 semaine</p>
+              Le kiff <br> À Bali <br> Pendant 12 semaines</p>
             <a href="#" class="btn btn-primary" style="width: 80%;">S'inscrire</a>
           </div>
       </div>
@@ -162,6 +167,8 @@
   <footer class=" container mt-5 mb-2">
     <small class="text-start text-muted">&copy; Bootstrap, et The Surfing Project</small>
   </footer>
+
+  <script> function myFunction() { var element = document.body; element.dataset.bsTheme = element.dataset.bsTheme == "light" ? "dark"  : "light"; } </script>
 
   <script src="bootstrap-5.3.8-dist/js/bootstrap.bundle.min.js"></script>
 </body>
