--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
     <small class="text-start text-muted">&copy; Bootstrap, et The Surfing Project</small>
   </footer>
 
-  <script> function myFunction() { var element = document.body; element.dataset.bsTheme = element.dataset.bsTheme == "light" ? "dark"  : "light"; } </script>
+  <script> function myFunction() { const element = document.body; element.dataset.bsTheme = element.dataset.bsTheme == "light" ? "dark"  : "light"; } </script>
 
   <script src="bootstrap-5.3.8-dist/js/bootstrap.bundle.min.js"></script>
 </body>
