--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
   <div class="header_image d-flex justify-content-center align-items-center">
     <div class="color-overlay d-flex justify-content-center align-items-center text-center flex-column mb-5">
       <h1>Partez à l'aventure</h1>
-      <p class="fs-5">Découvreza notre école de surf en peer-learning</p>
-      <div class="header_button">
-        <button type="button" class="btn btn-primary">
+      <p class="fs-5">Découvrez notre école de surf en peer-learning</p>
+      <div class="header_button d-flex gap-3 flex-wrap">
+        <button type="button" class="btn btn-primary flex-fill">
           Je m'inscris à la prochaine session
         </button>
-        <button type="button" class="btn btn-secondary">
+        <button type="button" class="btn btn-secondary flex-fill">
           Je découvre le programme
         </button>
       </div>
